@@ -21,6 +21,8 @@ menu.file.quit=Quit
 menu.file.quit_mn=Q
 menu.user=User
 menu.user_mn=U
+menu.programs=Programs
+menu.programs_mn=P
 menu.help=Help
 menu.help_mn=H
 menu.help.about=About...
