@@ -21,6 +21,8 @@ menu.file.quit=Beenden
 menu.file.quit_mn=B
 menu.user=Nutzer
 menu.user_mn=N
+menu.programs=Programme
+menu.programs_mn=P
 menu.help=Hilfe
 menu.help_mn=H
 menu.help.about=Über...
