@@ -5,6 +5,7 @@ Changelog for JErgometer
 
 2010-02-23
 * [stefan]  * implemented feature #177: extend timeline automatically when reaching end of traning program
+            * implemented issue #176: add a menu for managing programs
 
 2010-02-20
 * [stefan]  * implemented issue #178: save and restore last window position and size
